--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,21 +24,22 @@
       box-shadow: 0.2vmax 0 0.5vmax rgba(245, 245, 245, 0.492);
     }
     input{
-      padding: 0.5vmax;
+      padding: 0.5vmax 1vmax;
       color: whitesmoke;
       border: none;
       border-radius: 0.5vmax;
       outline: none;
       border-bottom: 0.1vmax solid rgba(245, 245, 245, 0.708);
       background-color: transparent;
-      box-shadow: 0 0 0.5vmax rgba(245, 245, 245, 0.751);
+      box-shadow: 0 0 0.5vmax rgba(245, 245, 245, 0.581);
       margin-bottom: 2vmax;
     }
     ul{
       list-style: none;
     }
     li{
-      width: 90%;
+      width: 100%;
+      padding-left: 0.5vmax;
       color: whitesmoke;
       /* background-color: red; */
       display: flex;
@@ -80,7 +81,8 @@
       background-color: transparent;
       border: none;
       margin-top: 1vmax;
-      box-shadow: 0.2vmax 0.2vmax 0.2vmax rgba(245, 245, 245, 0.711);
+      border-radius: 0.5vmax;
+      box-shadow: 0.1vmax 0.1vmax 0.2vmax rgba(245, 245, 245, 0.711);
     }
     button:active{
       scale: 0.9;
